--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ lib/oboe_metal.so
 ext/oboe_metal/Makefile
 ext/oboe_metal/mkmf.log
 ext/oboe_metal/oboe_metal.so
-ext/oboe_metal/oboe_wrap.o
+ext/oboe_metal/oboe_noop.so
+ext/oboe_metal/*.o
 log/
